--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Vk_education_1"
         tools:targetApi="31">
 
-    <activity android:name="com.lection.vk_homework_1.MainActivity"
+    <activity android:name=".MainActivity"
         android:exported="true">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
